--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <div class="baseline-input">
                 <div class="input-grid">
                     <div class="input-group">
-                        <label for="baseline-revenue">Current Annual Partnership Revenue ($M):</label>
+                        <label for="baseline-revenue">Current Annual Partnership Bookings ($M):</label>
                         <input type="number" id="baseline-revenue" value="30" min="0" step="1">
                     </div>
                 </div>
