--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         </div>
         
         <div class="chart-container">
-            <div class="chart-title">Aggregate by Calendar Year</div>
+            <div class="chart-title">Aggregate by Year</div>
             <table>
                 <thead>
                     <tr>
